--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bson": "^6.9.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
